--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "vite-vue3-sb",
+  "name": "jedlik-vite-ts-tamplate",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix",
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "vue": "^3.2.16",
-    "vue-i18n": "^9.2.0-beta.22"
+    "@mdi/font": "^6.5.95",
+    "axios": "^0.24.0",
+    "roboto-fontface": "^0.10.0",
+    "vue": "^3.2.26",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.12",
+    "vue3-table-lite": "^1.1.5",
+    "vuetify": "^3.0.0-alpha.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.16.7",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
-    "@storybook/addon-a11y": "^6.4.3",
-    "@storybook/addon-actions": "^6.4.3",
-    "@storybook/addon-essentials": "^6.4.3",
-    "@storybook/addon-links": "^6.4.3",
-    "@storybook/vue3": "^6.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/eslint-config-prettier": "7.0.0",
+    "@vue/eslint-config-typescript": "10.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "babel-loader": "^8.2.3",
-    "eslint": "^8.0.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-storybook": "^0.5.1",
-    "eslint-plugin-vue": "^8.0.1",
-    "prettier": "^2.5.0",
-    "sass": "^1.44.0",
-    "storybook-builder-vite": "^0.1.10",
-    "storybook-dark-mode": "^1.0.8",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
+    "eslint-plugin-vue": "^8.2.0",
+    "jest": "^26.6.3",
+    "prettier": "^2.5.1",
+    "sass": "^1.47.0",
+    "sass-loader": "^12.4.0",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.3.0"
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-loader": "^17.0.0",
+    "vue-tsc": "^0.30.2"
   }
 }
