--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^0.24.0",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.26",
-    "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12",
     "vue3-table-lite": "^1.1.5",
     "vuetify": "^3.0.0-alpha.12",
@@ -21,7 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
+    "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "@vitejs/plugin-vue": "^2.0.1",
