--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,12 @@
             "name": "Launch Edge against localhost",
             "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}/src"
+        },
+        {
+            "name": "Launch Microsoft Edge and open the Edge DevTools",
+            "request": "launch",
+            "type": "vscode-edge-devtools.debug",
+            "url": "http://localhost:8080" // Provide your project's url to finish configuring
         }
     ]
 }
