--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "christian-kohler.path-intellisense",
     "coenraads.bracket-pair-colorizer-2",
     "antfu.iconify",
-    "antfu.vite"
+    "antfu.vite",
+    "ms-edgedevtools.vscode-edge-devtools"
   ]
 }
