--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "vue": "^3.2.26",
+    "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.12",
     "vue3-table-lite": "^1.1.5",
     "vuetify": "^3.0.0-alpha.12",
