--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.26",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
@@ -18,8 +20,6 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@mdi/font": "^6.5.95",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -27,7 +27,6 @@
     "@vue/eslint-config-prettier": "7.0.0",
     "@vue/eslint-config-typescript": "10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-markdown": "^2.2.1",
