--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,10 +40,6 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "vite.notifyOnStarted": false,
-    "vite.port": 8080,
-    "vite.devCommand": "npm run dev",
-    "vite.open": false,
-    "vite.autoStart": false,
     "vscode-edge-devtools.mirrorEdits": true,
+    "json.schemaDownload.enable": false,
 }
