--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,7 @@
         "editor.defaultFormatter": "vscode.json-language-features"
     },
     "vscode-edge-devtools.mirrorEdits": true,
+    "vscode-edge-devtools.webhint": false,
     "json.schemaDownload.enable": false,
+    "editor.bracketPairColorization.enabled": true,
 }
