--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,13 @@
     "target": "esnext",
     "module": "esnext",
     "strict": true,
+    "jsx": "preserve",
     "strictBindCallApply": true,
     "importHelpers": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
+    "outDir": "dist",
+    "declaration": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
