--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite  --port 8080 --open",
+    "dev-clear": "vite --force --port 8080 --open",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix",
+    "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
     "format": "prettier .  --write"
   },
   "dependencies": {
@@ -21,21 +22,19 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-vue": "^2.0.1",
-    "@vue/eslint-config-prettier": "7.0.0",
-    "@vue/eslint-config-typescript": "10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-markdown": "^2.2.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.5.1",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4",
     "vite": "^2.7.12",
     "vite-plugin-eslint": "^1.3.0",
