--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev-clear": "vite --force --port 8080 --open",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
-    "format": "prettier .  --write"
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
+    "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}"
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
