--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,34 +18,14 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "baseUrl": ".",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "vite/client"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node", "vite/client"],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "files": [
-    "src/env.d.ts"
-  ],
-  "include": [
-    "src/**/**.ts",
-    "src/**/*.vue",
-    "src/**/*.d.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "files": ["src/env.d.ts"],
+  "include": ["src/**/**.ts", "src/**/*.vue", "src/**/*.d.ts"],
+  "exclude": ["node_modules"]
 }
