--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
-    "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}"
+    "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}",
+    "test": "vite-jest --no-cache"
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
@@ -21,6 +22,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -30,15 +32,16 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.3.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.0",
     "prettier": "^2.5.1",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
     "ts-node-dev": "^1.1.8",
+    "jest-environment-jsdom": "^27.4.3",
     "typescript": "^4.5.4",
     "vite": "^2.7.12",
+    "vite-jest": "^0.1.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-jest": "^5.0.0-alpha.10",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.30.2"
   },
