--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noImplicitAny": false,
     "baseUrl": ".",
     "typeRoots": ["node_modules/@types"],
-    "types": ["node", "vite/client"],
+    "types": ["node", "vite/client", "@types/jest"],
     "paths": {
       "@/*": ["src/*"]
     },
