--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "serve": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
     "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}",
-    "test": "vite-jest --no-cache"
+    "test": "vitest run"
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
     "roboto-fontface": "^0.10.0",
-    "vue": "^3.2.26",
+    "vue": "^3.2.27",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
     "vue3-table-lite": "^1.1.5",
@@ -22,7 +22,6 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -32,16 +31,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.3.0",
-    "jest": "^27.0.0",
+    "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
     "ts-node-dev": "^1.1.8",
-    "jest-environment-jsdom": "^27.4.3",
     "typescript": "^4.5.4",
     "vite": "^2.7.12",
-    "vite-jest": "^0.1.4",
     "vite-plugin-eslint": "^1.3.0",
+    "vitest": "^0.1.24",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.30.2"
   },
