--- a/package.json
+++ b/package.json
@@ -13,37 +13,37 @@
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "roboto-fontface": "^0.10.0",
-    "vue": "^3.2.29",
+    "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
-    "vue3-table-lite": "^1.1.5",
+    "vue3-table-lite": "^1.1.7-1",
     "vuetify": "^3.0.0-alpha.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "@vitejs/plugin-vue": "^2.0.1",
+    "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "@vitejs/plugin-vue": "^2.2.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "c8": "^7.11.0",
-    "eslint": "^8.7.0",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.3.0",
+    "eslint-plugin-vue": "^8.4.1",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
-    "sass": "^1.48.0",
+    "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.13",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.1",
     "vite-plugin-eslint": "^1.3.0",
-    "vitest": "^0.1.24",
+    "vitest": "^0.3.4",
     "vue-loader": "^17.0.0",
-    "vue-tsc": "^0.30.1"
+    "vue-tsc": "^0.31.3"
   },
   "repository": {
     "type": "github",
