--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "files": ["src/env.d.ts"],
-  "include": ["src/**/**.ts", "src/**/*.vue", "src/**/*.d.ts", "src/env.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.d.ts", "src/env.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
