--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
+    "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
@@ -26,11 +28,11 @@
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue": "^2.2.2",
     "@vue/test-utils": "^2.0.0-rc.18",
     "c8": "^7.11.0",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.1",
     "jsdom": "^19.0.0",
@@ -39,9 +41,9 @@
     "sass-loader": "^12.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5",
-    "vite": "^2.8.3",
+    "vite": "^2.8.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vitest": "^0.3.5",
+    "vitest": "^0.4.2",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.31.4"
   },
