--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "pinia": "^2.0.11",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
     "vue3-table-lite": "^1.1.7-1",
-    "vuetify": "^3.0.0-alpha.12",
-    "vuex": "^4.0.2"
+    "vuetify": "^3.0.0-alpha.12"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
