--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
-    "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
-    "bootstrap": "^5.1.3",
+    "mdb-vue-ui-kit": "^1.9.0",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
