--- a/package.json
+++ b/package.json
@@ -12,29 +12,24 @@
     "test-coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@mdi/font": "^6.5.95",
+    "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
-    "mdb-vue-ui-kit": "^1.9.0",
+    "bootstrap": "^5.1.3",
     "pinia": "^2.0.11",
-    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12",
-    "vue3-table-lite": "^1.1.7-1",
-    "vuetify": "^3.0.0-alpha.13"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.9",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "c8": "^7.11.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
