--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-vue-3": "^0.1.6",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
@@ -36,7 +37,6 @@
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
-    "vite-plugin-eslint": "^1.3.0",
     "vitest": "^0.5.5",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.32.0"
