--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite --port 8080 --open",
+    "json-server": "json-server --watch db.json",
     "dev-clear": "vite --force --port 8080 --open",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
