--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "jedlik-vite-ts-tamplate",
   "version": "0.0.1",
+  "description": "Vite + Vue 3 + Vuetify 3 + Pinia + Vitest + TypeScript template",
+  "keywords": [
+    "vite",
+    "vue3",
+    "vuetify3",
+    "Pinia",
+    "Vitest",
+    "TypeScript",
+    "TSLint",
+    "Prettier"
+  ],
   "scripts": {
     "dev": "vite --port 8080 --open",
     "json-server": "json-server --watch db.json",
@@ -18,19 +29,21 @@
     "pinia": "^2.0.11",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
+    "vue-global-api": "^0.4.1",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12",
+    "vue-router": "^4.0.13",
     "vue3-table-lite": "^1.1.7-1",
     "vuetify": "^3.0.0-alpha.13"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "@vitejs/plugin-vue": "^2.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "@vitejs/plugin-vue": "^2.2.4",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "c8": "^7.11.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
@@ -40,8 +53,8 @@
     "sass-loader": "^12.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5",
-    "vite": "^2.8.4",
-    "vitest": "^0.5.5",
+    "vite": "^2.8.6",
+    "vitest": "^0.5.9",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.32.0"
   },
