--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "removeComments": true,
     "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": true,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
