--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jedlik-vite-ts-tamplate",
   "version": "0.0.1",
-  "description": "Vite + Vue 3 + Vuetify 3 + Pinia + Vitest + TypeScript template",
+  "description": "Vite + Vue 3 + Quasar2 + Pinia + Vitest + TypeScript template",
   "keywords": [
     "vite",
     "vue3",
-    "vuetify3",
+    "quasar2",
     "Pinia",
     "Vitest",
     "TypeScript",
@@ -25,23 +25,23 @@
   },
   "dependencies": {
     "@mdi/font": "^6.5.95",
+    "@quasar/extras": "^1.13.0",
     "axios": "^0.26.0",
     "pinia": "^2.0.11",
+    "quasar": "^2.5.5",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.31",
     "vue-global-api": "^0.4.1",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.13",
-    "vue3-table-lite": "^1.1.7-1",
-    "vuetify": "^3.0.0-alpha.13"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.0.5",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "c8": "^7.11.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
@@ -49,8 +49,7 @@
     "eslint-plugin-vue": "^8.5.0",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
+    "sass": "1.32.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5",
     "vite": "^2.8.6",
