--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "sass": "1.32.13",
+    "sass-loader": "^12.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5",
     "vite": "^2.8.6",
